<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gazebo_ros_bridge</name>
  <version>0.0.1</version>
  <description>Gazebo-ROS 2 bridge package for lidar data</description>
  <maintainer email="shibin@todo.todo">shibin</maintainer>
  <license>Apache-2.0</license>

  <!-- Dependencies -->
  <depend>ros_gz_bridge</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>rclpy</depend>

  <!-- Test Dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
